# tsoa/swagger.json
@@ -160,60 +160,6 @@
 					}
 				]
 			}
-		},
-		"/api/server-status": {
-			"get": {
-				"operationId": "GetServerStatus",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"serverTime": {
-											"type": "string"
-										},
-										"status": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"serverTime",
-										"status"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Server Status"
-				],
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/api/server-status/routes": {
-			"get": {
-				"operationId": "GetServerRoutes",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Server Status"
-				],
-				"security": [],
-				"parameters": []
-			}
 		}
 	},
 	"servers": [
